# mclip

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: architecture.md  getting-started.md  index.md  policies.md  tools.md
docs/api/: executor.md  policy.md  registry.md  schema.md  server.md
docs/api/introspect/: completions.md  engine.md  help.md  man.md
src/mclip/: __init__.py  executor.py  policy.py  registry.py  schema.py  server.py
src/mclip/introspect/: __init__.py  completions.py  engine.py  help.py  man.py
tests/: conftest.py  test_executor_policy.py  test_policy.py  test_registry_policy.py  test_schema_policy.py  test_server_policy_e2e.py
