[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mclip"
version = "0.1.0"
description = "MCP-CLI Protocol - consolidate CLIs into MCP tools via introspection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Kamil Rybacki" },
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mclip = "mclip.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mclip"]
